--- a/bower.json
+++ b/bower.json
@@ -5,11 +5,12 @@
   "dependencies": {
   	"modernizr": "~2.8.3",
     "jquery": "~2.1.1",
-    "bootstrap": "~3.3.0",
+    "bootstrap": "~3.3.1",
     "fontawesome": "~4.2.0",
     "jQuery.mmenu": "~4.5.7",
     "angularjs": "1.3.0",
-    "animate-css": "~3.2.0"
+    "animate-css": "~3.2.0",
+    "OwlCarousel": "~1.3.2"
   },
   "private": true
 }
