--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,10 @@
 		    "wpackagist-plugin/regenerate-thumbnails": ">=2.2",
 		    "wpackagist-plugin/wp-pagenavi": ">=2.8",
 		    "wpackagist-plugin/advanced-custom-fields": ">=4",
+		    "wpackagist-plugin/acf-field-date-time-picker": ">=2",
 		    "wpackagist-plugin/members": ">=0.2.4",
 		    "wpackagist-plugin/wordpress-importer": ">=0.6",
+		    "wpackagist-plugin/responsive-lightbox": ">=1.4",
 		    "wpackagist-plugin/blade": ">=0.3"
     },
     "extra": 
