--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
 		    "wpackagist-plugin/advanced-custom-fields": ">=4",
 		    "wpackagist-plugin/acf-field-date-time-picker": ">=2",
 		    "wpackagist-plugin/members": ">=0.2.4",
+		    "wpackagist-plugin/wp-mail-smtp": ">=0.9",
 		    "wpackagist-plugin/wordpress-importer": ">=0.6",
 		    "wpackagist-plugin/responsive-lightbox": ">=1.4",
 		    "wpackagist-plugin/blade": ">=0.3"
