--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,27 @@
 {
-    "name": "blect-wp-theme",
-    "version": "1.0.0",
-    "main": "",
-    "dependencies": {
-        "modernizr": "~2.8.3",
-        "jquery": "~2.1.4",
-        "bootstrap": "~3.3.4",
-        "fontawesome": "~4.3.0",
-        "jQuery.mmenu": "~5.1.2",
-        "angularjs": "1.3.0",
-        "animate-css": "~3.2.0",
-        "OwlCarousel": "~1.3.2",
-        "fullpage.js": "~2.6.5",
-        "FlexSlider": "https://github.com/woothemes/FlexSlider.git"
-    },
-    "overrides": {
-        "main": [
-            "jquery.flexslider.js",
-            "flexslider.css"
-        ]
-    },
-    "private": true
+  "name": "blect-wp-theme",
+  "version": "1.0.0",
+  "main": "",
+  "dependencies": {
+    "modernizr": "~2.8.3",
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.4",
+    "fontawesome": "~4.3.0",
+    "jQuery.mmenu": "~5.1.2",
+    "angularjs": "1.3.0",
+    "animate-css": "~3.2.0",
+    "OwlCarousel": "~1.3.2",
+    "fullpage.js": "~2.6.5",
+    "FlexSlider": "https://github.com/woothemes/FlexSlider.git"
+  },
+  "overrides": {
+    "main": [
+      "jquery.flexslider.js",
+      "flexslider.css"
+    ]
+  },
+  "private": true,
+  "resolutions": {
+    "jquery": "~2.1.4"
+  }
 }
