--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "animate-css": "~3.2.0",
     "OwlCarousel": "~1.3.2",
     "fullpage.js": "~2.6.5",
-    "FlexSlider": "https://github.com/woothemes/FlexSlider.git"
+    "FlexSlider": "https://github.com/woothemes/FlexSlider.git",
+    "moment": "~2.10.3"
   },
   "overrides": {
     "main": [
