--- a/composer.json
+++ b/composer.json
@@ -35,13 +35,14 @@
 		    "wpackagist-plugin/akismet": "dev-trunk",
 		    "wpackagist-plugin/regenerate-thumbnails": ">=2.2",
 		    "wpackagist-plugin/wp-pagenavi": ">=2.8",
-		    "wpackagist-plugin/advanced-custom-fields": ">=4",
 		    "wpackagist-plugin/acf-field-date-time-picker": ">=2",
 		    "wpackagist-plugin/members": ">=0.2.4",
 		    "wpackagist-plugin/wp-mail-smtp": ">=0.9",
 		    "wpackagist-plugin/wordpress-importer": ">=0.6",
 		    "wpackagist-plugin/responsive-lightbox": ">=1.4",
-		    "wpackagist-plugin/blade": ">=0.3"
+		    "wpackagist-plugin/advanced-cron-manager": ">=1.4",
+		    "wpackagist-plugin/members": ">=0.2.5",
+		    "wpackagist-plugin/woocommerce": ">=2.4.4"
     },
     "extra": 
     {
@@ -52,15 +53,12 @@
 		    	"content/plugins/{$name}": ["type:wordpress-plugin"]
 		    }
 
-	  },
-	  "require-dev": {
-        "phpunit/phpunit": "4.3.*"
-    },
-	  "autoload": 
-	  {
-	  		"psr-4":
-	  		{
-	  			"Framework\\": "content/themes/blect/framework"
-	  		}
-	  }
+	},
+	"autoload": 
+	{
+			"psr-4":
+			{
+				"Framework\\": "content/themes/blect/framework"
+			}
+	}
 }
