--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "modernizr": "~2.8.3",
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.4",
+    "bootstrap": "~3.3.5",
+    "bootstrap-sass": "~3.3.5",
     "fontawesome": "~4.3.0",
     "jQuery.mmenu": "~5.1.2",
     "angularjs": "1.3.0",
