--- a/composer.json
+++ b/composer.json
@@ -32,16 +32,17 @@
     {
 		    "wordpress": "4.7",
 		    "fancyguy/webroot-installer": "1.0.0",
-		    "wpackagist-plugin/akismet": "dev-trunk",
-		    "wpackagist-plugin/regenerate-thumbnails": ">=2.2.4",
-		    "wpackagist-plugin/wp-pagenavi": ">=2.8",
-		    "wpackagist-plugin/acf-field-date-time-picker": ">=2",
-		    "wpackagist-plugin/wp-mail-smtp": ">=0.9.5",
-		    "wpackagist-plugin/wordpress-importer": ">=0.6.1",
-		    "wpackagist-plugin/responsive-lightbox": ">=1.6.6",
+		    "wpackagist-plugin/akismet": ">=3.2",
+		    "wpackagist-plugin/regenerate-thumbnails": ">=2.2.6",
+		    "wpackagist-plugin/wp-pagenavi": ">=2.91",
+		    "wpackagist-plugin/acf-field-date-time-picker": ">=2.1.3",
+		    "wpackagist-plugin/wp-mail-smtp": ">=0.10.1",
+		    "wpackagist-plugin/wordpress-importer": ">=0.6.3",
+		    "wpackagist-plugin/responsive-lightbox": ">=1.6.10",
 		    "wpackagist-plugin/advanced-cron-manager": ">=1.4.3",
-		    "wpackagist-plugin/members": ">=1.1.0",
-		    "wpackagist-plugin/woocommerce": ">=2.4.12"
+		    "wpackagist-plugin/members": ">=1.1.2",
+		    "wpackagist-plugin/woocommerce": ">=2.6.9",
+		    "wpackagist-plugin/rest-api": "2.0-beta15",
     },
     "extra":
     {
