--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
 		    "wpackagist-plugin/advanced-cron-manager": ">=1.4.3",
 		    "wpackagist-plugin/members": ">=1.1.2",
 		    "wpackagist-plugin/woocommerce": ">=2.6.9",
-		    "wpackagist-plugin/rest-api": "2.0-beta15",
+		    "wpackagist-plugin/rest-api": "2.0-beta15"
     },
     "extra":
     {
